# msvc-code-analysis-action

./: .editorconfig  .gitignore  README.md  action.yml  index.js  package-lock.json  package.json
.github/ado/: azure-pipeline.yml
.github/workflows/: run-tests.yml
test/: cmake-api-tests.js
test/sample/: CMakeLists.txt  Custom.ruleset  Invalid.ruleset
test/sample/failure/: CMakeLists.txt  fail.cpp
test/sample/include/: test.h
test/sample/include/regular/: regular.h
test/sample/include/system/: system.h
test/sample/src/: fileA.cpp  fileB.cpp  test.cpp
test/sample/tests/: CMakeLists.txt  test.cpp
